@@ -504,6 +504,18 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </div>
 </div>
 <div class="sect1">
+<h2 id="_1_4_6">1.4.6</h2>
+<div class="sectionbody">
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Fixed <code>openLastDownload</code> in #127 #138</p>
+</li>
+</ol>
+</div>
+</div>
+</div>
+<div class="sect1">
 <h2 id="_1_4_5">1.4.5</h2>
 <div class="sectionbody">
 <div class="olist arabic">
